--- a/02-Conversioni-operazioni/02-conversioni_op.ipynb
+++ b/02-Conversioni-operazioni/02-conversioni_op.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +115,7 @@
       "<class 'str'>\n",
       "3\n",
       "<class 'int'>\n",
+      "9\n",
       "3.0\n",
       "<class 'float'>\n",
       "0.6\n"
@@ -129,7 +130,7 @@
     "numero:int=int(stringa)\n",
     "print(numero)\n",
     "print(type(numero))\n",
-    "numero+6\n",
+    "print(numero+6)\n",
     "\n",
     "numero_float:float=float(stringa)\n",
     "print(numero_float)\n",
