--- a/02-Conversioni-operazioni/esercizi.ipynb
+++ b/02-Conversioni-operazioni/esercizi.ipynb
@@ -15,23 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "286.0\n",
-      "hai lavorato 14.3 e hai guadagnato 20\n"
+      "290.0\n",
+      "Hai lavorato 14.5 e hai guadagnato 290.0\n"
      ]
     }
    ],
    "source": [
-    "ore: int=14.3\n",
+    "ore: int=14.5\n",
     "retribuzione_oraria: int=20\n",
     "print(ore*retribuzione_oraria)\n",
-    "print(f\"hai lavorato {ore} e hai guadagnato {retribuzione_oraria}\")"
+    "print(f\"Hai lavorato {ore} e hai guadagnato {ore*retribuzione_oraria}\")"
    ]
   },
   {
@@ -46,21 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40460\n"
+      "194208\n",
+      "La superficie del tuo terreno è 48 metri quadrati che corrispondono a 194208 acri\n"
      ]
     }
    ],
    "source": [
-    "superficie_terreno: float=10\n",
+    "superficie_terreno: float=48\n",
     "acro: int=4046\n",
-    "print(superficie_terreno*acro)"
+    "print(superficie_terreno*acro)\n",
+    "print(f\"La superficie del tuo terreno è {superficie_terreno} metri quadrati che corrispondono a {superficie_terreno*acro} acri\")"
    ]
   },
   {
@@ -77,9 +79,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7955.608\n",
+      "Il profitto annuale è di 7955.608\n"
+     ]
+    }
+   ],
+   "source": [
+    "totale_vendite: float=34589.6\n",
+    "profitto_annuale: float=23/100*totale_vendite\n",
+    "print(profitto_annuale)\n",
+    "print(f\"Il profitto annuale è di {profitto_annuale}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.24\n",
+      "43.74\n",
+      "Il costo dell'acquisto netto è di 40.5 e l'IVA corrisponde a 3.24, quindi il costo totale dell'acquisto sarà di 43.74\n"
+     ]
+    }
+   ],
+   "source": [
+    "acquisto_netto: float=40.5\n",
+    "IVA: float=8/100*acquisto_netto\n",
+    "costo_totale: float=acquisto_netto+IVA\n",
+    "print(IVA)\n",
+    "print(costo_totale)\n",
+    "print(f\"Il costo dell'acquisto netto è di {acquisto_netto} e l'IVA corrisponde a {IVA}, quindi il costo totale dell'acquisto sarà di {costo_totale}\")"
+   ]
   }
  ],
  "metadata": {
