--- a/02-Conversioni-operazioni/esercizi (1).ipynb
+++ b/02-Conversioni-operazioni/esercizi (1).ipynb
@@ -15,23 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "326.83\n",
-      "Hai lavorato 14.5 e hai guadagnato 326.83\n"
+      "hai lavorato 12.5 ore per 22.8 franchi all'ora\n",
+      "hai guadagnato 285.0 franchi\n"
      ]
     }
    ],
    "source": [
-    "ore: float=14.5\n",
-    "retribuzione_oraria: float=22.54\n",
-    "print(ore*retribuzione_oraria)\n",
-    "print(f\"Hai lavorato {ore} e hai guadagnato {ore*retribuzione_oraria}\")"
+    "# ottieni le ore lavorative \n",
+    "n_lav =float(input(\"inserisci ore lavorative\")) \n",
+    "\n",
+    "retribuzione_ora=float(input(\"inserisci retribuzione oraria\"))\n",
+    "\n",
+    "print(f\"hai lavorato {n_lav} ore per {retribuzione_ora} franchi all'ora\")\n",
+    "\n",
+    "print(f\"hai guadagnato {n_lav*retribuzione_ora} franchi\")"
    ]
   },
   {
@@ -46,23 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2105783489866535\n",
-      "La superficie del tuo terreno è 4898 metri quadrati che corrispondono a 19817308 acri\n"
+      "nel tuo terreno ci stanno 0.030400395452298567 acro\n"
      ]
     }
    ],
    "source": [
-    "superficie_terreno: float=4898\n",
-    "acro: int=4046\n",
-    "print(superficie_terreno/acro)\n",
-    "print(f\"La superficie del tuo terreno è {superficie_terreno} metri quadrati che corrispondono a {superficie_terreno*acro} acri\")"
+    "superficie = float(input(f\"inserisci la superficie del terreno in metri quadrati\"))\n",
+    "acri=superficie/4046\n",
+    "print(f\"nel tuo terreno ci stanno {acri} acro\")"
    ]
   },
   {
@@ -80,23 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7955.608\n",
-      "Il profitto annuale è di 7955.608\n"
+      "Il totale delle vendite corrisponde a 1234.5 franchi, per cui il profitto é di 283.935 franchi\n"
      ]
     }
    ],
    "source": [
-    "totale_vendite: float=34589.6\n",
-    "profitto_annuale: float=23/100*totale_vendite\n",
-    "print(profitto_annuale)\n",
-    "print(f\"Il profitto annuale è di {profitto_annuale}\")"
+    "tot_vendite : float=float(input(\"Totale delle vendite?\"))\n",
+    "profitto :float=(tot_vendite/100)*23\n",
+    "print(f\"Il totale delle vendite corrisponde a {tot_vendite} franchi, per cui il profitto é di {profitto} franchi\")"
    ]
   },
   {
@@ -115,59 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.24\n",
-      "43.74\n",
-      "Il costo dell'acquisto netto è di 40.5 e l'IVA corrisponde a 3.24, quindi il costo totale dell'acquisto sarà di 43.74\n"
+      "il costo dell'acquisto al netto di IVA é 123.6\n",
+      "l`IVA é di 9.888\n",
+      "costo totale dell`acquisto 133.488\n"
      ]
     }
    ],
    "source": [
-    "acquisto_netto: float=40.5\n",
-    "IVA: float=8/100*acquisto_netto\n",
-    "costo_totale: float=acquisto_netto+IVA\n",
-    "print(IVA)\n",
-    "print(costo_totale)\n",
-    "print(f\"Il costo dell'acquisto netto è di {acquisto_netto} e l'IVA corrisponde a {IVA}, quindi il costo totale dell'acquisto sarà di {costo_totale}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "RICETTA BISCOTTI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Per ottenere 39.0 biscotti hai bisogno 121.875 grammi di zucchero, 81.25 grammi di burro e 223.4375 grammi di farina.\n"
-     ]
-    }
-   ],
-   "source": [
-    "quantita_desiderata: float=float(input(f\"Inserisci la quantità di biscotti che desideri ottenere\"))\n",
-    "zucchero_48_biscotti: int=150\n",
-    "burro_48_biscotti: int=100\n",
-    "farina_48_biscotti: int=275\n",
-    "\n",
-    "zucchero_nuovo: float=150/48*quantita_desiderata\n",
-    "burro_nuovo: float=100/48*quantita_desiderata\n",
-    "farina_nuovo: float=275/48*quantita_desiderata\n",
-    "\n",
-    "print(f\"Per ottenere {quantita_desiderata} biscotti hai bisogno {zucchero_nuovo} grammi di zucchero, {burro_nuovo} grammi di burro e {farina_nuovo} grammi di farina.\")\n"
+    "costo_tot = float(input(f\"inserisci il costo totale dell'acquisto \"))\n",
+    "print(f\"il costo dell'acquisto al netto di IVA é {costo_tot}\")\n",
+    "# Salvo il calcolo in una variabile per poterla riutilizzare !!!!!\n",
+    "iva=costo_tot*8/100\n",
+    "print(f\"l`IVA é di {iva}\")\n",
+    "print(f\"costo totale dell`acquisto {iva+costo_tot}\")"
    ]
   },
   {
@@ -180,7 +147,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "work",
    "language": "python",
    "name": "python3"
   },
