--- a/03_condizionali/03_condizionali.ipynb
+++ b/03_condizionali/03_condizionali.ipynb
@@ -104,6 +104,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "falso\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 5==6:\n",
+    "    print(\"VERO\")\n",
+    "    print(\"seconda riga\")\n",
+    "print(\"falso\")\n",
+    "#questo viene eseguito comunque"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,14 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bravo , hai venduto parecchio ! Riceverai un bonus di 500\n"
+     ]
+    }
+   ],
    "source": [
-    "# vendite= int (input (\"Quante vendite hai fatto ? \"))\n",
-    "#if vendite \n",
-    "    # bonus=\n",
-    "    # print(f\"Bravo , hai venduto parecchio ! Riceverai un bonus di {bonus}\")"
+    "vendite= int (input (\"Quante vendite hai fatto ? \"))\n",
+    "\n",
+    "if vendite > 50000:\n",
+    "    bonus=500\n",
+    "    print(f\"Bravo , hai venduto parecchio ! Riceverai un bonus di {bonus}\")"
    ]
   },
   {
@@ -177,6 +207,32 @@
     "Inoltre, desidera che\n",
     "il programma stampi a video se con quei voti lo studente è promosso o meno\n",
     "(media >= 4). \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sei promosso!\n",
+      "La tua media è di 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nota_1=float (input(\"Nota verifica 1\"))\n",
+    "nota_2=float (input(\"Nota verifica 2\"))\n",
+    "nota_3=float (input(\"Nota verifica 3\"))\n",
+    "\n",
+    "media = (nota_1+nota_2+nota_3) /3\n",
+    "\n",
+    "if media >= 4:\n",
+    "    print(\"Sei promosso!\")\n",
+    "print (f\"La tua media è di {media}\")\n"
    ]
   },
   {
@@ -295,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
