--- a/03_condizionali/03_esercizi.ipynb
+++ b/03_condizionali/03_esercizi.ipynb
@@ -79,8 +79,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'area del rettangolo 2 è maggiore del rettangolo 1.\n",
-      "L'area del rettangolo 1 è di 6.0 cm e quella del rettangolo 2 di 24.0 cm.\n"
+      "Le aree dei due rettangoli sono uguali\n",
+      "L'area del rettangolo 1 è di 8.0 cm e quella del rettangolo 2 di 8.0 cm.\n"
      ]
     }
    ],
@@ -94,13 +94,17 @@
     "area_1 = float=base_1*altezza_1\n",
     "area_2 = float=base_2*altezza_2\n",
     "\n",
+    "if area_1 < area_2:\n",
+    "    print(\"L'area del rettangolo 2 è maggiore del rettangolo 1.\")\n",
+    "\n",
     "if area_1 > area_2:\n",
     "    print(\"L'area del rettangolo 1 è maggiore del rettangolo 2.\")\n",
     "\n",
     "else:\n",
-    "    print(\"L'area del rettangolo 2 è maggiore del rettangolo 1.\")\n",
+    "    print(\"Le aree dei due rettangoli sono uguali\")\n",
     "\n",
     "print(f\"L'area del rettangolo 1 è di {area_1} cm e quella del rettangolo 2 di {area_2} cm.\")\n",
+    "\n",
     "\n",
     "\n"
    ]
