--- a/03_condizionali/03_prova test 1.ipynb
+++ b/03_condizionali/03_prova test 1.ipynb
@@ -13,22 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sei una persona molto alta\n"
+      "Sei una persona molto alta.\n",
+      "La tua altezza è di 190.0 centimetri.\n"
      ]
     }
    ],
    "source": [
-    "altezza_utente= float(input(\"Qual è la tua altezza in centimetri?\"))\n",
+    "altezza = float(input(\"Inserisci la tua altezza in centimetri\"))\n",
     "\n",
-    "if altezza_utente >= 180:\n",
-    "    print(\"Sei una persona molto alta\")"
+    "if altezza >= 180:\n",
+    "    print(\"Sei una persona molto alta.\")\n",
+    "\n",
+    "print(f\"La tua altezza è di {altezza} centimetri.\")"
    ]
   },
   {
@@ -43,23 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sei una persona di media altezza\n"
+      "Sei una persona di media altezza.\n",
+      "La tua altezza è di 140.0 centimetri.\n"
      ]
     }
    ],
    "source": [
-    "altezza_utente= float(input(\"Qual è la tua altezza in centimetri?\"))\n",
+    "altezza = float(input(\"Inserisci la tua altezza in centimetri\"))\n",
     "\n",
-    "if altezza_utente >= 180:\n",
-    "    print(\"Sei una persona molto alta\")\n",
-    "print(\"Sei una persona di media altezza\")"
+    "if altezza >= 180:\n",
+    "    print(\"Sei una persona molto alta.\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Sei una persona di media altezza.\")\n",
+    "\n",
+    "print(f\"La tua altezza è di {altezza} centimetri.\")"
    ]
   },
   {
@@ -72,41 +80,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le aree dei due rettangoli sono uguali\n",
-      "L'area del rettangolo 1 è di 8.0 cm e quella del rettangolo 2 di 8.0 cm.\n"
+      "L'area del primo rettangolo è di 8.0 mentre l'area del secondo rettangolo è di 54.0.\n",
+      "L'area del secondo rettangolo è maggiore del primo.\n"
      ]
     }
    ],
    "source": [
-    "base_1 = float(input(\"Quanto misura in centimetri la base del primo rettangolo?\"))\n",
-    "altezza_1 = float(input(\"Quanto misura in centimetri l'altezza del primo rettangolo?\"))\n",
+    "base_1 = float(input(\"Inserisci la base del primo rettangolo in centimetri.\"))\n",
+    "altezza_1 = float(input(\"Inserisci l'altezza del primo rettangolo in centimetri.\"))\n",
+    "base_2 = float(input(\"Inserisci la base del secondo rettangolo in centimetri.\"))\n",
+    "altezza_2 = float(input(\"Inserisci l'altezza del secondo rettangolo in centimetri.\"))\n",
     "\n",
-    "base_2 = float(input(\"Quanto misura in centimetri la base del primo rettangolo?\"))\n",
-    "altezza_2 = float(input(\"Quanto misura in centimetri l'altezza del primo rettangolo?\"))\n",
+    "area_1: float=base_1*altezza_1\n",
+    "area_2: float=base_2*altezza_2\n",
     "\n",
-    "area_1 = float=base_1*altezza_1\n",
-    "area_2 = float=base_2*altezza_2\n",
-    "\n",
-    "if area_1 < area_2:\n",
-    "    print(\"L'area del rettangolo 2 è maggiore del rettangolo 1.\")\n",
-    "\n",
+    "print(f\"L'area del primo rettangolo è di {area_1} mentre l'area del secondo rettangolo è di {area_2}.\")\n",
     "if area_1 > area_2:\n",
-    "    print(\"L'area del rettangolo 1 è maggiore del rettangolo 2.\")\n",
+    "    print(\"L'area del primo rettangolo è maggiore del secondo.\")\n",
     "\n",
-    "else:\n",
-    "    print(\"Le aree dei due rettangoli sono uguali\")\n",
+    "elif area_1 < area_2:\n",
+    "    print(\"L'area del secondo rettangolo è maggiore del primo.\")\n",
     "\n",
-    "print(f\"L'area del rettangolo 1 è di {area_1} cm e quella del rettangolo 2 di {area_2} cm.\")\n",
-    "\n",
-    "\n",
-    "\n"
+    "elif area_1 == area_2:\n",
+    "    print(\"I due rettangoli hanno la stessa area.\")"
    ]
   },
   {
@@ -119,28 +122,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Il numero che hai inserito è dispari.\n",
-      "Il numero che hai inserito è 15\n"
+      "Il numero che hai scelto è 5\n",
+      "Il numero che hai scelto è dispari.\n"
      ]
     }
    ],
    "source": [
-    "numero = int(input(\"Inserisci un numero intero\"))\n",
+    "numero = int(input(\"Inserisci un numero intero.\"))\n",
+    "\n",
+    "print(f\"Il numero che hai scelto è {numero}\")\n",
     "\n",
     "if numero%2 == 0:\n",
-    "    print(\"Il numero che hai inserito è pari.\")\n",
+    "    print(\"Il numero che hai scelto è pari\")\n",
     "\n",
     "else:\n",
-    "    print(\"Il numero che hai inserito è dispari.\")\n",
-    "\n",
-    "print(f\"Il numero che hai inserito è {numero}\")"
+    "    print(\"Il numero che hai scelto è dispari.\")"
    ]
   },
   {
@@ -153,25 +156,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La password è stata accettata\n"
+      "La password è stata accettata.\n"
      ]
     }
    ],
    "source": [
-    "password = str(input(\"Inserisci una password\"))\n",
-    "lunghezza_password= int=len(password)\n",
+    "password = str(input(\"Inserisci una password.\"))\n",
+    "lunghezza_password = int=len(password)\n",
+    "\n",
     "if lunghezza_password >= 8:\n",
-    "    print(\"La password è stata accettata\")\n",
+    "    print(\"La password è stata accettata.\")\n",
     "\n",
     "else:\n",
-    "    print(\"La password inserita è troppo corta\")\n"
+    "    print(\"La password inserita è troppo corta.\")"
    ]
   },
   {
@@ -185,27 +189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Il numero che hai inserito è minore di 10, quindi b = 0 e c = 1\n",
-      "Il numero che hai inserito è 5.0\n"
+      "a è minore di 10 e quindi b=0 e c=1\n",
+      "Il numero che hai inserito è 5\n"
      ]
     }
    ],
    "source": [
-    "a=float(input(\"Inserisci un numero\"))\n",
+    "a = int(input(\"Inserisci un numero intero.\"))\n",
     "\n",
-    "if a <10:\n",
-    "    b = 0\n",
-    "    c = 1\n",
-    "    print(\"Il numero che hai inserito è minore di 10, quindi b = 0 e c = 1\")\n",
+    "if a < 10:\n",
+    "    print(\"a è minore di 10 e quindi b=0 e c=1\")\n",
     "\n",
-    "print(f\"Il numero che hai inserito è {a}\")\n"
+    "print(f\"Il numero che hai inserito è {a}\")"
    ]
   },
   {
@@ -225,21 +227,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Il numero che hai inserito è maggiore a 10, quindi b = 99\n",
-      "Il numero che hai inserito è 22.0\n"
+      "a è maggiore o uguale a 10 e quindi b=99\n",
+      "Il numero che hai inserito è 12\n"
      ]
     }
    ],
    "source": [
-    "a=float(input(\"Inserisci un numero\"))\n",
+    "a = int(input(\"Inserisci un numero intero.\"))\n",
     "\n",
-    "if a <10:\n",
-    "    b = 0\n",
-    "    print(\"Il numero che hai inserito è minore di 10, quindi b = 0\")\n",
+    "if a < 10:\n",
+    "    print(\"a è minore di 10 e quindi b=0\")\n",
     "\n",
     "else:\n",
-    "    b = 99\n",
-    "    print(\"Il numero che hai inserito è maggiore a 10, quindi b = 99\")\n",
+    "    print(\"a è maggiore o uguale a 10 e quindi b=99\")\n",
     "\n",
     "print(f\"Il numero che hai inserito è {a}\")"
    ]
@@ -250,6 +250,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
