--- a/03_condizionali/03a_prova test 2.ipynb
+++ b/03_condizionali/03a_prova test 2.ipynb
@@ -19,27 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sei un teenager.\n",
-      "Tu hai 15.0 anni\n"
+      "Tu hai 15 anni.\n",
+      "Sei un teenager.\n"
      ]
     }
    ],
    "source": [
-    "#chiedo l'età\n",
-    "età = float(input(\"Quanti hanni hai?\"))\n",
+    "età = int(input(\"Inserisci la tua età.\"))\n",
     "\n",
-    "#creo le diverse condizioni\n",
+    "print(f\"Tu hai {età} anni.\")\n",
+    "\n",
     "if età <= 1:\n",
-    "    print(\"Sei un bebe.\")\n",
+    "    print(\"Sei un bebè.\")\n",
     "\n",
     "elif età > 1 and età <= 13:\n",
     "    print(\"Sei un bambino.\")\n",
@@ -48,10 +46,7 @@
     "    print(\"Sei un teenager.\")\n",
     "\n",
     "elif età > 20:\n",
-    "    print(\"Sei un adulto.\")\n",
-    "\n",
-    "\n",
-    "print(f\"Tu hai {età} anni\")"
+    "    print(\"Sei un adulto.\")"
    ]
   },
   {
@@ -64,58 +59,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Il numero che hai inserito è 8\n",
-      "I tuo numero in numeri romani è VIII\n"
+      "Il numero che hai inserito è 4 e in numeri romani è IV\n"
      ]
     }
    ],
    "source": [
-    "#chiedo all'utente di inserire un numero da 1 a 10\n",
-    "numero = int(input(\"Inserisci un numero intero compreso tra 1 e 10\"))\n",
-    "print(f\"Il numero che hai inserito è {numero}\")\n",
+    "numero = int(input(\"Inserisci un numero intero tra 1 e 10.\"))\n",
     "\n",
-    "#creo le diverse condizioni\n",
-    "if numero < 1 or numero > 10:\n",
-    "    print(\"ERRORE: il numero che hai inserito non rispetta i requisiti richiesti.\")\n",
-    "\n",
-    "elif numero == 1:\n",
-    "    print(\"I tuo numero in numeri romani è I\")\n",
+    "if numero == 1:\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è I\")\n",
     "\n",
     "elif numero == 2:\n",
-    "    print(\"I tuo numero in numeri romani è II\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è II\")\n",
     "\n",
     "elif numero == 3:\n",
-    "    print(\"I tuo numero in numeri romani è III\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è III\")\n",
     "\n",
     "elif numero == 4:\n",
-    "    print(\"I tuo numero in numeri romani è IV\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è IV\")\n",
     "\n",
     "elif numero == 5:\n",
-    "    print(\"I tuo numero in numeri romani è V\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è V\")\n",
     "\n",
     "elif numero == 6:\n",
-    "    print(\"I tuo numero in numeri romani è VI\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è VI\")\n",
     "\n",
     "elif numero == 7:\n",
-    "    print(\"I tuo numero in numeri romani è VII\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è VII\")\n",
     "\n",
     "elif numero == 8:\n",
-    "    print(\"I tuo numero in numeri romani è VIII\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è VIII\")\n",
     "\n",
     "elif numero == 9:\n",
-    "    print(\"I tuo numero in numeri romani è IX\")\n",
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è IX\")\n",
     "\n",
     "elif numero == 10:\n",
-    "    print(\"I tuo numero in numeri romani è X\")\n"
+    "    print(f\"Il numero che hai inserito è {numero} e in numeri romani è X\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Errore: il numero inserito non rispetta le condizioni richieste.\")"
    ]
   },
   {
@@ -138,38 +127,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lei ha acquistato 12 pacchetti.\n",
-      "Lei avrà uno sconto del 10%\n"
+      "Hai acquistato 33 pacchetti e quindi avrai uno sconto del 20%.\n"
      ]
     }
    ],
    "source": [
-    "quantità_acquistata = int(input(\"Quanti pacchetti ha acquistato?\"))\n",
-    "print(f\"Lei ha acquistato {quantità_acquistata} pacchetti.\")\n",
+    "numero_pacchetti = int(input(\"Inserisci il numero di pacchetti che hai acquistato.\"))\n",
     "\n",
-    "if quantità_acquistata < 10:\n",
-    "    print(\"Lei non avrà uno sconto perchè ha acquistato troppi pochi pacchetti.\")\n",
-    "    \n",
-    "elif quantità_acquistata >= 10 and quantità_acquistata <= 19:\n",
-    "    print(\"Lei avrà uno sconto del 10%\")\n",
     "\n",
-    "elif quantità_acquistata >= 20 and quantità_acquistata <= 49:\n",
-    "    print(\"Lei avrà uno sconto del 20%\")\n",
+    "if numero_pacchetti >= 10 and numero_pacchetti < 20:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 10%.\")\n",
     "\n",
-    "elif quantità_acquistata >= 50 and quantità_acquistata <= 99:\n",
-    "    print(\"Lei avrà uno sconto del 30%\")\n",
+    "elif numero_pacchetti >= 20 and numero_pacchetti < 50:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 20%.\")\n",
     "\n",
-    "elif quantità_acquistata >= 100:\n",
-    "    print(\"Lei avrà uno sconto del 40%\")"
+    "elif numero_pacchetti >= 50 and numero_pacchetti < 100:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 30%.\")\n",
+    "\n",
+    "elif numero_pacchetti >= 100:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 40%.\")"
    ]
   },
   {
@@ -182,51 +165,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lei ha acquistato 12 pacchetti.\n",
-      "Lei avrà uno sconto del 10%\n",
-      "Il prezzo finale è di 1069.2\n"
+      "Hai acquistato 22 pacchetti e quindi avrai uno sconto del 20%. Pagherai quindi 435.6 franchi.\n"
      ]
     }
    ],
    "source": [
-    "quantità_acquistata = int(input(\"Quanti pacchetti ha acquistato?\"))\n",
-    "print(f\"Lei ha acquistato {quantità_acquistata} pacchetti.\")\n",
+    "numero_pacchetti = int(input(\"Inserisci il numero di pacchetti che hai acquistato.\"))\n",
+    "costo_pacchetto: int=99\n",
+    "costo_totale: int=costo_pacchetto*numero_pacchetti\n",
+    "sconto_10: float=costo_totale/100*10\n",
+    "sconto_20: float=costo_totale/100*20\n",
+    "sconto_30: float=costo_totale/100*30\n",
+    "sconto_40: float=costo_totale/100*40\n",
     "\n",
-    "costo_pacchetto = 99\n",
-    "costo_intero: float=costo_pacchetto*quantità_acquistata\n",
-    "costo_10: float=costo_pacchetto*quantità_acquistata*90/100\n",
-    "costo_20: float=costo_pacchetto*quantità_acquistata*80/100\n",
-    "costo_30: float=costo_pacchetto*quantità_acquistata*70/100\n",
-    "costo_40: float=costo_pacchetto*quantità_acquistata*60/100\n",
+    "if numero_pacchetti >= 10 and numero_pacchetti < 20:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 10%. Pagherai quindi {sconto_10} franchi.\")\n",
     "\n",
-    "if quantità_acquistata < 10:\n",
-    "    print(\"Lei non avrà uno sconto perchè ha acquistato troppi pochi pacchetti.\")\n",
-    "    print(f\"Il costo totale è di {costo_intero}\")\n",
+    "elif numero_pacchetti >= 20 and numero_pacchetti < 50:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 20%. Pagherai quindi {sconto_20} franchi.\")\n",
     "\n",
-    "elif quantità_acquistata >= 10 and quantità_acquistata <= 19:\n",
-    "    print(\"Lei avrà uno sconto del 10%\")\n",
-    "    print(f\"Il prezzo finale è di {costo_10}\")\n",
+    "elif numero_pacchetti >= 50 and numero_pacchetti < 100:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 30%. Pagherai quindi {sconto_30} franchi.\")\n",
     "\n",
-    "elif quantità_acquistata >= 20 and quantità_acquistata <= 49:\n",
-    "    print(\"Lei avrà uno sconto del 20%\")\n",
-    "    print(f\"Il prezzo finale è di {costo_20}\")\n",
-    "\n",
-    "elif quantità_acquistata >= 50 and quantità_acquistata <= 99:\n",
-    "    print(\"Lei avrà uno sconto del 30%\")\n",
-    "    print(f\"Il prezzo finale è di {costo_30}\")\n",
-    "\n",
-    "elif quantità_acquistata >= 100:\n",
-    "    print(\"Lei avrà uno sconto del 40%\")\n",
-    "    print(f\"Il prezzo finale è di {costo_40}\")"
+    "elif numero_pacchetti >= 100:\n",
+    "    print(f\"Hai acquistato {numero_pacchetti} pacchetti e quindi avrai uno sconto del 40%. Pagherai quindi {sconto_40} franchi.\")"
    ]
   },
   {
@@ -247,39 +216,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "metadata": {}
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L'anno 2008 è bisestile.\n"
+      "L'anno 2000 è bisestile.\n"
      ]
     }
    ],
    "source": [
     "#versione 1\n",
-    "anno = int(input(\"Inserisci un anno\"))\n",
+    "anno = int(input(\"Inserisci un anno.\"))\n",
     "\n",
-    "if anno%100 == 0 and anno%400 == 0:\n",
-    "    print(f\"L'anno {anno} è bisestile.\")\n",
+    "if anno%100 == 0:\n",
+    "    if anno%400 == 0:\n",
+    "        print(f\"L'anno {anno} è bisestile.\")\n",
+    "    \n",
+    "    else:\n",
+    "        print(f\"L'anno {anno} non è bisestile.\")\n",
     "\n",
-    "elif anno%100 != 0 and anno%4 == 0:\n",
+    "elif anno%4 == 0:\n",
     "    print(f\"L'anno {anno} è bisestile.\")\n",
     "\n",
     "else:\n",
-    "    print(f\"L'anno {anno} non è bisestile.\")\n"
+    "    print(f\"L'anno {anno} non è bisestile.\")\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'anno 2000 è bisestile.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#versione 2\n",
+    "anno = int(input(\"Inserisci un anno.\"))\n",
+    "\n",
+    "if anno%100 == 0 and anno&400 == 0:\n",
+    "    print(f\"l'anno {anno} è bisestile.\")\n",
+    "\n",
+    "elif anno&4 == 0:\n",
+    "    print(f\"L'anno {anno} è bisestile.\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"L'anno {anno} non è bisestile.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,13 +280,6 @@
     "# Indice di massa corporea\n",
     "Scrivere un programma che calcoli l'indice di massa corporea (BMI, body mass index). Il BMI viene spesso utilizzato per determinare se una persona è sovrappeso o sottopeso per la sua altezza. L'indice di massa corporea viene calcolato con questa formula: $$BMI = \\frac{peso} {altezza^{2}}$$ dove ``peso`` è espresso in chilogrammi e ``altezza`` è espressa in metri. Il programma chiede all'utente di inserire il proprio peso e la propria altezza e visualizza quindi il BMI dell'utente. Il programma dovrebbe inoltre mostrare un messaggio che informi se l'utente ha un peso ottimale, se è sottopeso o se è sovrappeso. Il peso di una persona è ottimale se il BMI è fra 18.5 e 25; se il BMI è minore di 18.5 la persona è considerata sottopeso; se invece è superiore a 25 la persona è considerata sovrappeso."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
