--- a/03_condizionali/04_funzioni_es.ipynb
+++ b/03_condizionali/04_funzioni_es.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.0"
+       "5.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,8 +32,11 @@
     "    area_triangolo = base*altezza/2\n",
     "    return area_triangolo\n",
     "\n",
-    "area_triangolo (2,3)  \n",
     "\n",
+    "altezza_triangolo = float(input(\"Inserisci l'altezza del triangolo.\"))\n",
+    "base_triangolo = float(input(\"Inserisci la base del triangolo.\"))\n",
+    "\n",
+    "area_triangolo (altezza_triangolo,base_triangolo)\n",
     "  \n",
     "\n",
     "\n"
@@ -57,10 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def falling_distance(t,g=9.8):\n",
+    "    falling_distance = 1/2*g*t**2\n",
+    "    return falling_distance\n",
+    "\n",
+    "t = int(input(\"Inserisci il tempo di caduta dell'oggetto in secondi.\"))\n",
+    "\n",
+    "\n",
+    "falling_distance (t)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +103,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 è più grande di 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.max(a, b)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def max(a,b):\n",
+    "    if a > b:\n",
+    "        print(f\"{a} è più grande di {b}\")\n",
+    "    elif a < b:\n",
+    "        print(f\"{b} è più grande di {a}\")\n",
+    "    else:\n",
+    "        print(\"I due numeri sono uguali\")\n",
+    "    \n",
+    "    return max\n",
+    "\n",
+    "a = int(input(\"Inserisci un numero intero.\"))\n",
+    "b = int(input(\"Inserisci un numero intero.\"))\n",
+    "\n",
+    "max(a,b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,6 +150,13 @@
     "Scrivere una funzione di nome convert che accetti come argomento un numero di secondi\n",
     "e stampi il numero di ore, minuti e secondi corrispettivi."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
